Corrections du contraste de l'hover des boutons filtres.

--- a/assets/style.css
+++ b/assets/style.css
@@ -259,6 +259,10 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 
+.active.active-tag {
+	color: black !important;
+}
+
 @media all and (max-width: 1180px) {
 	#about{
 		height: 1000px;
